apps/tinyauth/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tinyauth
  labels:
    app.kubernetes.io/name: tinyauth
